# gary_serial

./: CMakeLists.txt  README.md  package.xml
include/gary_contact/: auto_aim_contact.hpp
include/gary_serial/: dr16_receiver.hpp  rm_referee.hpp  rm_referee_system.hpp
include/utils/: crc8_crc16.hpp  msg_include.hpp  rm_referee.hpp  rm_referee_protocol.hpp  struct_typedef.hpp  uint2float.hpp
include/utils/protocols/: bullet_remaining_handler.hpp  client_command_handler.hpp  game_result_handler.hpp  game_status_handler.hpp  ground_robot_position_hander.hpp  interactive_data_handler.hpp  msg_handler_base.hpp  power_heat_handler.hpp  robot_buff_handler.hpp  robot_hurt_handler.hpp  robot_position_handler.hpp  robot_status_handler.hpp  shoot_data_handler.hpp
src/: auto_aim_contact.cpp  dr16_receiver.cpp  rm_referee.cpp  rm_referee_system.cpp
src/utils/: crc8_crc16.cpp  rm_referee.cpp
